Added Currency and Payment Method requests

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "timer pwa server side",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Yakushin103/Timer_pwa_server.git"
@@ -15,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/Yakushin103/Timer_pwa_server/issues"
   },
-  "homepage": "https://github.com/Yakushin103/Timer_pwa_server#readme"
+  "homepage": "https://github.com/Yakushin103/Timer_pwa_server#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "mysql2": "^3.14.5",
+    "nodemon": "^3.1.10"
+  }
 }
