--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "moment": "^2.30.1",
     "mysql2": "^3.14.5",
     "nodemon": "^3.1.10"
   }
