--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-USER_NAME="root"
-HOST="localhost"
-PASSWORD=""
+USER_NAME="u3339950_yakushin103"
+HOST="31.31.197.6"
+PORT='3306'
+PASSWORD="aWuepD8NK!"
+DATABASE='u3339950_timer_pwa'
 
 SALTROUNDS='10'
 
